fix navbar links on mobile:

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -47,11 +47,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: 150px;
   gap: 51px;
   padding: 0px !important;
 }
 
+.linksContainerVertical > a,
 .link > a,
 .link > span {
   color: inherit;
@@ -86,5 +88,11 @@
 @media (max-width: 1199px) {
   .navbar {
     padding: 8px 20px;
+  }
+}
+
+@media (max-width: 521px) {
+  .linksContainerVertical {
+    margin-top: 80px;
   }
 }
